bodhilibrs_frompyo3/tests/ui/error-unsupported-field-attr-key.rs
use frompyo3::FromPyO3;

#[derive(FromPyO3)]
struct TestUnsupportedFieldAttrKey {
  #[frompyo3(unknown = "metadata")]
  path: String,
}

fn main() {}
